[package]
name = "hiex"
version = "0.1.0"
authors = ["MinusGix <minusgix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Compile-time type safe casting to/from usize.
usize_cast = "1.1.0"

[dev-dependencies]
tempfile = "3.1.0"
