[package]
name = "hiex"
version = "0.1.0"
authors = ["MinusGix <minusgix@gmail.com>"]
edition = "2018"

[features]
default = []

# Truncate support for tempfile library
tempfile_truncate = ["tempfile"]


[dependencies]
# Compile-time type safe casting to/from usize.
usize_cast = "1.1.0"

# req: feature(tempfile)
tempfile = { version = "3.1.0", optional = true }

[dev-dependencies]
tempfile = "3.1.0"
